feat (086): workaround to create multimodular monolith